--- a/packages/agent-resources/pyproject.toml
+++ b/packages/agent-resources/pyproject.toml
@@ -12,6 +12,15 @@ license = "MIT"
 dependencies = [
     "httpx>=0.27",
     "typer>=0.12",
+    "pyyaml>=6.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+    "ruff>=0.1.0",
+    "mypy>=1.0",
+    "types-PyYAML>=6.0",
 ]
 
 [project.scripts]
