--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -28,9 +28,9 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Getting Started:
-    - Resource Types: what-is-agent-resources.md
-    - Install Agent Resources: install-agent-resources.md
-    - Create Your Own Repo: create-your-own-repo.md
-  - How Packaging Works: how-packaging-works.md
-  - Supported Platforms: supported-platforms.md
+  - Resource Types: what-is-agent-resources.md
+  - Install Agent Resources: install-agent-resources.md
+  - Create Your Own Repo: create-your-own-repo.md
+  - Packaging: how-packaging-works.md
+  - Agent Resources SDK: agent-resources-sdk.md
+  - Supported Tools: supported-platforms.md
